--- a/BlockchainETN/ClientApp/src/index.html
+++ b/BlockchainETN/ClientApp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BlockchainETN</title>
+  <title>Eaton - Blockchain </title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
